@@ -25,7 +25,9 @@ has 'resultset_class'      => is => 'ro', isa => 'ClassName',
    default                 => q(File::DataClass::ResultSet);
 has 'schema'               => is => 'ro', isa => 'Object',
    required                => TRUE, weak_ref => TRUE,
-   handles                 => [ qw(exception_class path storage) ];
+   handles                 => [ qw(exception_class path) ];
+has 'storage'              => is => 'rw', isa => 'Object',
+   lazy_build              => TRUE;
 
 sub resultset {
    my $self = shift;
@@ -33,6 +35,10 @@ sub resultset {
    my $attrs = { %{ $self->resultset_attributes }, source => $self };
 
    return $self->resultset_class->new( $attrs );
+}
+
+sub _build_storage {
+   my $self = shift; return $self->schema->storage;
 }
 
 __PACKAGE__->meta->make_immutable;
